--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Indecision</title>
-    <link rel="icon" type="image/png" href="/images/question.png" />
-    <link rel="stylesheet" type="text/css" href="/dist/styles.css">
+    <link rel="icon" type="image/png" href="images/question.png" />
+    <link rel="stylesheet" type="text/css" href="dist/styles.css">
 </head>
 <body>
     <div id="app"></div>
-    <script src="/dist/budle.js"></script>
+    <script src="dist/budle.js"></script>
 </body>
 </html>
